--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       <td>⭐⭐⭐</td>
     </tr>
   </table>
+  <hr>
+  <h3><a href="D:\Atom\Web Development\HTML- Personal Site\contact-me.html">Contact me</a></h3>
 </body>
 
 </html>
