--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </tr>
   </table>
   <hr>
-  <h3><a href="D:\Atom\Web Development\HTML- Personal Site\contact-me.html">Contact me</a></h3>
+  <h3><a href="https://jydnh.github.io/cv/contact-me.html">Contact me</a></h3>
 </body>
 
 </html>
